--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Animated Counter</title>
-  <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+    <link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
     <header>
@@ -26,7 +27,7 @@
                 <div>
                     <i class="fab fa-linkedin fa-4x"></i>
                     <div class="counter" data-target="500">0</div>
-                    <h3>Followers</h3>
+                    <h3>Connections</h3>
                 </div>
                 <div>
                     <i class="fab fa-instagram fa-4x"></i>
