--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             </div>
             <div>
                 <i class="fab fa-facebook fa-4x"></i>
-                <div class="counter" data-target="500">0</div>
+                <div class="counter" data-target="500">40</div>
                 <h3>Friends</h3>
             </div>
             <div>
@@ -38,7 +38,7 @@
             </div>
         </div>
     </section>
-    
-      <script src="script.js"></script>
+
+      <script src="js/script.js"></script>
   </body>
 </html>
